--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -642,7 +642,59 @@ section {
   line-height: 24px;
   font-size: 14px;
 }
+/*--------------------------------------------------------------
+# hobbies
+--------------------------------------------------------------*/
+.hobbies .icon-box {
+  margin-bottom: 20px;
+}
 
+.hobbies .icon {
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 54px;
+  height: 54px;
+  background: #149ddd;
+  border-radius: 50%;
+  transition: 0.5s;
+  border: 1px solid #149ddd;
+}
+
+.hobbies .icon i {
+  color: #fff;
+  font-size: 24px;
+}
+
+.hobbies .icon-box:hover .icon {
+  background: #fff;
+}
+
+.hobbies .icon-box:hover .icon i {
+  color: #149ddd;
+}
+
+.hobbies .title {
+  margin-left: 80px;
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 18px;
+}
+
+.hobbies .title a {
+  color: #343a40;
+}
+
+.hobbies .title a:hover {
+  color: #149ddd;
+}
+
+.hobbies .description {
+  margin-left: 80px;
+  line-height: 24px;
+  font-size: 14px;
+}
 /*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
